--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8">
 
-  <script src="js/sketch.js"></script>
+  <script src="sketch.js"></script>
 
 </head>
 
