--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <script src="js/game.js"></script>
   <script src="js/player.js"></script>
 
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-database.js"></script>
+   <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-database.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
@@ -22,18 +22,16 @@
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyAzwv1fUxs9jJ-wSvgsOH8-lSOJ4A6cBBE",
-    authDomain: "fruitgame-9c37d.firebaseapp.com",
-    projectId: "fruitgame-9c37d",
-    storageBucket: "fruitgame-9c37d.appspot.com",
-    messagingSenderId: "529574824708",
-    appId: "1:529574824708:web:d19b389dd1796648fb9e51"
+    apiKey: "AIzaSyDb9f4uV6pcTppZo3ts6bIIodyHqigiKE8",
+    authDomain: "fruit-game-b5802.firebaseapp.com",
+    projectId: "fruit-game-b5802",
+    storageBucket: "fruit-game-b5802.appspot.com",
+    messagingSenderId: "292884117023",
+    appId: "1:292884117023:web:395723c01d38d1582f872a"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <meta charset="utf-8">
 
   <script src="sketch.js"></script>
 
